11/opa-gatekeeper/bad-pod-second.yml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-pod-second
  labels:
    app: bad-pod-second
spec:
  containers:
  - name: webapp-ctr
    image: k8smaestro/web-app:1.0
    securityContext:
      privileged: true
