11/opa-gatekeeper/bad-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-pod
  labels:
    app: bad-pod
spec:
  containers:
  - name: webapp-ctr
    image: k8smaestro/web-app:1.0
    securityContext:
      privileged: true
